# episim

./: .dockerignore  .gitignore  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PUSH_TO_GITHUB.md  README.md  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml  search.html  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/core/: index.html
api/designs/: index.html
api/research/: index.html
apps/hf_space/: README.md  app.py  requirements.txt
apps/per_design/: README.md  app.py
deployment/: index.html
docs/: deployment.md  getting-started.md  index.md  lab.md
docs/api/: core.md  designs.md  research.md
episim/: __init__.py
episim/analytics/: __init__.py  estimators.py
episim/core/: __init__.py  attrition.py  bias.py  outcomes.py  populations.py  reproducibility.py
episim/designs/: __init__.py  _helpers.py  case_control.py  cohort.py  cross_sectional.py  ecological.py  instrumental_variables.py  interrupted_time_series.py  markov_decision.py  seir.py  (+10 more)
getting-started/: index.html
lab/: index.html
notebooks/: 01_cross_sectional.ipynb  01_cross_sectional.py  02_case_control.ipynb  02_case_control.py  03_cohort.ipynb  03_cohort.py  04_rct_parallel.ipynb  04_rct_parallel.py  05_ecological_peai.ipynb  05_ecological_peai.py  06_rct_cluster.ipynb  06_rct_cluster.py  07_stepped_wedge.ipynb  07_stepped_wedge.py  08_interrupted_time_series.ipynb  08_interrupted_time_series.py  09_regression_discontinuity.ipynb  09_regression_discontinuity.py  10_instrumental_variables.ipynb  10_instrumental_variables.py  11_propensity_score.ipynb  11_propensity_score.py  12_survival_cox.ipynb  12_survival_cox.py  13_meta_analysis.ipynb  13_meta_analysis.py  14_agent_based_seir.ipynb  14_agent_based_seir.py  15_microsimulation_lifetable.ipynb  15_microsimulation_lifetable.py  16_markov_decision.ipynb  16_markov_decision.py  17_network_contagion.ipynb  17_network_contagion.py  18_qualitative_mixed_methods.ipynb  18_qualitative_mixed_methods.py
search/: search_index.json
(+34 files in other folders)
