[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "episim"
version = "0.12.1a1"
description = "Epidemiology Platform for In Silico Methods"
readme = "README.md"
authors = [{name = "Siddalingaiah H. S.", email = "hssling@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "formulaic>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "nbmake>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "jupytext>=1.16",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
app = [
    "gradio>=5.0",
]

[project.urls]
Homepage = "https://github.com/hssling/episim"
Documentation = "https://hssling.github.io/episim"
Issues = "https://github.com/hssling/episim/issues"

[tool.hatch.build.targets.wheel]
packages = ["episim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "formulaic", "formulaic.*", "scipy.*", "sklearn.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
]

[tool.coverage.run]
source = ["episim"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
